import re
from datetime import datetime
from typing import TYPE_CHECKING, Any, List, Optional

from pydantic import field_validator
from sqlmodel import Field, Relationship, SQLModel

from app.models.common import TimestampedModel, json_dict_field, utcnow

if TYPE_CHECKING:
    from app.models.session import WorkoutSession
    from app.models.template import TrainingSplit


class UserBase(SQLModel):
    name: str
    email: str = Field(index=True, unique=True)

    @field_validator("email")
    @classmethod
    def validate_email(cls, value: str) -> str:
        normalized = value.strip().lower()
        if not re.fullmatch(r"[^@\s]+@[^@\s]+\.[^@\s]+", normalized):
            raise ValueError("Invalid email address.")
        return normalized

    @field_validator("name")
    @classmethod
    def validate_name(cls, value: str) -> str:
        normalized = value.strip()
        if len(normalized) < 2:
            raise ValueError("Name must be at least 2 characters long.")
        return normalized


class User(UserBase, TimestampedModel, table=True):
    __tablename__ = "users"

    id: Optional[int] = Field(default=None, primary_key=True)
    password_hash: str

    settings: Optional["UserSettings"] = Relationship(back_populates="user")
    training_splits: List["TrainingSplit"] = Relationship(back_populates="user")
    workout_sessions: List["WorkoutSession"] = Relationship(back_populates="user")
    refresh_tokens: List["RefreshToken"] = Relationship(back_populates="user")


class UserSettings(SQLModel, table=True):
    __tablename__ = "user_settings"

    user_id: int = Field(foreign_key="users.id", primary_key=True)
    preferences: dict[str, Any] = json_dict_field()
    updated_at: datetime = Field(default_factory=utcnow)

    user: User = Relationship(back_populates="settings")


class UserCreate(UserBase):
    password: str

    @field_validator("password")
    @classmethod
    def validate_password(cls, value: str) -> str:
        if len(value) < 8:
            raise ValueError("Password must be at least 8 characters long.")
        return value


class UserRead(UserBase):
    id: int
    created_at: datetime


class UserUpdate(SQLModel):
    name: str | None = None
    email: str | None = None

    @field_validator("email")
    @classmethod
    def validate_email(cls, value: str | None) -> str | None:
        if value is None:
            return value
        normalized = value.strip().lower()
        if not re.fullmatch(r"[^@\s]+@[^@\s]+\.[^@\s]+", normalized):
            raise ValueError("Invalid email address.")
        return normalized

    @field_validator("name")
    @classmethod
    def validate_name(cls, value: str | None) -> str | None:
        if value is None:
            return value
        normalized = value.strip()
        if len(normalized) < 2:
            raise ValueError("Name must be at least 2 characters long.")
        return normalized


class UserPasswordUpdate(SQLModel):
    current_password: str
    new_password: str

    @field_validator("new_password")
    @classmethod
    def validate_password(cls, value: str) -> str:
        if len(value) < 8:
            raise ValueError("Password must be at least 8 characters long.")
        return value


class UserDeleteRequest(SQLModel):
    password: str


class UserSettingsRead(SQLModel):
    user_id: int
    preferences: dict[str, Any]
    updated_at: datetime


class UserSettingsUpdate(SQLModel):
    preferences: dict[str, Any]


class UserSettingsPatch(SQLModel):
    preferences: dict[str, Any]


class LoginRequest(SQLModel):
    email: str
    password: str

    @field_validator("email")
    @classmethod
    def validate_email(cls, value: str) -> str:
        normalized = value.strip().lower()
        if not re.fullmatch(r"[^@\s]+@[^@\s]+\.[^@\s]+", normalized):
            raise ValueError("Invalid email address.")
        return normalized


class AuthToken(SQLModel):
    access_token: str
    refresh_token: str
    token_type: str = "bearer"
    user: UserRead


class RefreshRequest(SQLModel):
    refresh_token: str


class RefreshToken(SQLModel, table=True):
    __tablename__ = "refresh_tokens"

    id: int | None = Field(default=None, primary_key=True)
    user_id: int = Field(foreign_key="users.id", index=True)
    token_hash: str = Field(index=True, unique=True)
    family_id: str = Field(index=True)
    expires_at: datetime
    revoked: bool = Field(default=False)
    created_at: datetime = Field(default_factory=utcnow)

    user: User = Relationship(back_populates="refresh_tokens")
